--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "zendframework/zend-mvc-i18n": "^1.1"
+    "zendframework/zend-mvc-i18n": "^1.1",
+    "squizlabs/php_codesniffer": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5"
